--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
     </v-toolbar>
     <v-content>
       <section>
-        <v-parallax src="assets/hero.jpeg" height="600">
+        <v-parallax src="assets/toaster.jpg" height="600">
           <v-layout
             column
             align-center
@@ -87,7 +87,7 @@
       <section>
         <v-container grid-list-xl>
           <v-layout row wrap justify-center class="my-5">
-            <v-flex xs12 sm5>
+            <v-flex xs12 sm4>
               <v-card class="elevation-0 transparent">
                 <v-card-title primary-title class="layout justify-center">
                   <div class="headline">Circle info</div>
@@ -116,7 +116,7 @@
                 </v-list>
               </v-card>
             </v-flex>
-            <v-flex xs12 sm5 offset-sm1>
+            <v-flex xs12 sm4 offset-sm1>
               <v-card class="elevation-0 transparent">
                 <v-card-title primary-title class="layout justify-center">
                   <div class="headline">Contact us</div>
@@ -130,7 +130,7 @@
                       <v-icon class="blue--text text--lighten-2">email</v-icon>
                     </v-list-tile-action>
                     <v-list-tile-content>
-                      <v-list-tile-title>support@techthetoaster.org</v-list-tile-title>
+                      <v-list-tile-title><a href="mailto:support@techthetoaster.org">support@techthetoaster.org</a></v-list-tile-title>
                     </v-list-tile-content>
                   </v-list-tile>
                 </v-list>
