--- a/public/index.html
+++ b/public/index.html
@@ -62,7 +62,7 @@
                           <v-icon class="red--text text--lighten-2">store</v-icon>
                         </v-list-tile-action>
                         <v-list-tile-content>
-                          <v-list-tile-title><a href="https://techthetoaster.stores.jp" target="_blank" rel="noopener">Stores.jp（紙・電子書籍）で購入</a></v-list-tile-title>
+                          <v-list-tile-title><a href="https://techthetoaster.stores.jp" target="_blank" rel="noopener">Stores.jpで購入（紙・電子書籍）</a></v-list-tile-title>
                         </v-list-tile-content>
                       </v-list-tile>
                     </v-list>
@@ -72,7 +72,7 @@
                           <v-icon class="red--text text--lighten-2">store</v-icon>
                         </v-list-tile-action>
                         <v-list-tile-content>
-                          <v-list-tile-title><a href="https://example.com" target="_blank" rel="noopener">BOOTH（電子書籍）で購入</a></v-list-tile-title>
+                          <v-list-tile-title><a href="https://example.com" target="_blank" rel="noopener">BOOTHで購入（電子書籍）</a></v-list-tile-title>
                         </v-list-tile-content>
                       </v-list-tile>
                     </v-list>
