--- a/public/chrome-devtools-console/try-it-out/index.html
+++ b/public/chrome-devtools-console/try-it-out/index.html
@@ -19,6 +19,12 @@
 
     gtag('config', 'UA-123763033-1');
   </script>
+
+  <style>
+    .container.grid-list-md .layout .flex {
+      padding: 10px;
+    }
+  </style>
 </head>
 <body>
 <div id="app">
@@ -27,31 +33,62 @@
       <v-toolbar-title v-text="title" class="white--text"></v-toolbar-title>
     </v-toolbar>
     <v-content>
-      <v-form ref="form" v-model="valid">
-        <v-text-field v-model="id" :rules="nameRules" label="Id" required></v-text-field>
-        <v-text-field v-model="name" label="Name" required></v-text-field>
-        <v-text-field v-model="age" label="Age" required></v-text-field>
-        <v-text-field v-model="email" :rules="emailRules" label="Email" required></v-text-field>
-        <v-btn :disabled="!valid" @click="submit">
-          submit
-        </v-btn>
-      </v-form>
+      <v-container fluid>
+        <v-container grid-list-md text-xs-center>
+          <v-layout row wrap>
 
-      <template>
-        <v-data-table
-          :headers="headers"
-          :items="users"
-          hide-actions
-          class="elevation-1"
-        >
-          <template slot="items" slot-scope="props">
-            <td>{{ props.item.id }}</td>
-            <td>{{ props.item.name }}</td>
-            <td class="text-xs-right">{{ props.item.age }}</td>
-            <td>{{ props.item.email }}</td>
-          </template>
-        </v-data-table>
-      </template>
+            <v-flex md5>
+              <h2>登録画面</h2>
+              <v-form ref="form" v-model="valid">
+
+                <v-text-field
+                    v-model="id"
+                    :rules="idRules"
+                    label="Id"
+                    placeholder="U0001"
+                    required
+                >
+                </v-text-field>
+
+                <v-text-field
+                  v-model="name"
+                  :rules="nameRules"
+                  label="Name"
+                  placeholder="中野 達也"
+                  required
+                >
+                </v-text-field>
+
+                <v-text-field v-model="age" label="Age" placeholder="32" required></v-text-field>
+                <v-text-field v-model="email" :rules="emailRules" label="Email" placeholder="howdy39@example.com" required></v-text-field>
+                <v-btn :disabled="!valid" @click="submit">
+                  submit
+                </v-btn>
+              </v-form>
+            </v-flex>
+
+            <v-flex md7>
+              <h2>一覧画面</h2>
+              <template>
+                <v-data-table
+                  :headers="headers"
+                  :items="users"
+                  hide-actions
+                  class="elevation-1"
+                >
+                  <template slot="items" slot-scope="props">
+                    <td>{{ props.item.id }}</td>
+                    <td>{{ props.item.name }}</td>
+                    <td class="text-xs-right">{{ props.item.age }}</td>
+                    <td>{{ props.item.email }}</td>
+                  </template>
+                </v-data-table>
+              </template>
+            </v-flex>
+
+          </v-layout>
+        </v-container>
+      </v-container>
     </v-content>
   </v-app>
 </div>
@@ -65,6 +102,9 @@
         title: 'Try it out',
         valid: false,
         id: '',
+        idRules: [
+          v => !!v || 'Id is required',
+        ],
         name: '',
         nameRules: [
           v => !!v || 'Name is required',
@@ -73,7 +113,7 @@
         age: '',
         email: '',
         emailRules: [
-          v => !!v || 'E-mail is required',
+          v => !!v || 'Email is required',
           v => /.+@.+/.test(v) || 'E-mail must be valid'
         ],
         headers: [
@@ -83,9 +123,9 @@
             sortable: false,
             value: 'id'
           },
-          {text: 'Name', value: 'name'},
+          {text: 'Name', align: 'left', value: 'name'},
           {text: 'Age', align: 'right', value: 'age'},
-          {text: 'Email', value: 'email'},
+          {text: 'Email', align: 'left', value: 'email'},
         ],
         users: [
           {
@@ -93,6 +133,12 @@
             name: '山田 太郎',
             email: 'taro.yamada@example.com',
             age: 42
+          },
+          {
+            id: 'U0002',
+            name: '佐藤 次郎',
+            email: 'jiro.sato@example.com',
+            age: 22
           },
         ]
       }
