--- a/public/chrome-devtools-console/try-it-out/index.html
+++ b/public/chrome-devtools-console/try-it-out/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Try it out | Chrome デベロッパーツールを使いこなそう Console 編</title>
+  <title>Try it out | Chrome デベロッパーツールを使いこなそう 〜 Console 編 〜</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons' rel="stylesheet">
@@ -54,7 +54,7 @@
                   v-model="name"
                   :rules="nameRules"
                   label="Name"
-                  placeholder="中野 達也"
+                  placeholder="howdy39"
                   required
                 >
                 </v-text-field>
@@ -99,7 +99,7 @@
     el: '#app',
     data() {
       return {
-        title: 'Try it out',
+        title: 'Try it out | Chrome デベロッパーツールを使いこなそう 〜 Console 編 〜',
         valid: false,
         id: '',
         idRules: [
