fix: タイトルを省略

--- a/public/chrome-devtools-console/try-it-out/index.html
+++ b/public/chrome-devtools-console/try-it-out/index.html
@@ -99,7 +99,7 @@
     el: '#app',
     data() {
       return {
-        title: 'Try it out | Chrome デベロッパーツールを使いこなそう 〜 Console 編 〜',
+        title: 'Try it out',
         valid: false,
         id: '',
         idRules: [
