fix: ロゴ埋め込み

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>We are Tech The Toaster</title>
+  <title>Tech The Toaster</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons' rel="stylesheet">
@@ -20,7 +20,7 @@
  <div id="app">
    <v-app light>
     <v-toolbar class="white">
-      <v-toolbar-title v-text="title"></v-toolbar-title>
+      <v-toolbar-title><img src="assets/techthetoaster@2x.png" alt="Tech The Toaster" height="18px"></v-toolbar-title>
     </v-toolbar>
     <v-content>
       <section>
@@ -31,7 +31,7 @@
             justify-center
             class="white--text"
           >
-            <img src="assets/vuetify.png" alt="Vuetify.js" height="200">
+            <img src="assets/logo@2x.png" alt="Tech The Toaster logo" height="140" style="margin:30px">
             <h1 class="white--text mb-2 display-1 text-xs-center">We are Tech The Toaster</h1>
             <div class="subheading mb-3 text-xs-center">Writing for fun</div>
           </v-layout>
