fix: 画面のちらつきを修正

--- a/public/index.html
+++ b/public/index.html
@@ -15,12 +15,17 @@
 
     gtag('config', 'UA-123763033-1');
   </script>
+  <style>
+    [v-cloak] {
+      display: none
+    }
+  </style>
 </head>
 <body>
- <div id="app">
+ <div id="app" v-cloak>
    <v-app light>
     <v-toolbar class="white">
-      <v-toolbar-title><img src="assets/techthetoaster@2x.png" alt="Tech The Toaster" height="16px"></v-toolbar-title>
+      <v-toolbar-title><img src="assets/techthetoaster@2x.png" alt="Tech The Toaster" height="18px"></v-toolbar-title>
     </v-toolbar>
     <v-content>
       <section>
