--- a/public/index.html
+++ b/public/index.html
@@ -54,33 +54,29 @@
             <v-container grid-list-xl>
               <v-layout row wrap align-center>
                 <v-flex xs12 sm12 md12>
-                  <v-card flat class="transparent">
-                    <v-card-title primary-title class="layout justify-center">
-                      <div class="headline text-xs-center">Chrome デベロッパーツールを使いこなそう<br> 〜 Console 編 〜</div>
-                    </v-card-title>
-                    <v-card-text>
-                      Chrome デベロッパーツール の Console をより詳しく知るための一冊です。<br>
-                    </v-card-text>
-                    <v-list class="transparent">
-                      <v-list-tile>
-                        <v-list-tile-action>
-                          <v-icon class="red--text text--lighten-2">store</v-icon>
-                        </v-list-tile-action>
-                        <v-list-tile-content>
-                          <v-list-tile-title><a href="https://techthetoaster.stores.jp" target="_blank" rel="noopener">Stores.jpで購入（紙・電子書籍）</a></v-list-tile-title>
-                        </v-list-tile-content>
-                      </v-list-tile>
-                    </v-list>
-                    <v-list class="transparent">
-                      <v-list-tile>
-                        <v-list-tile-action>
-                          <v-icon class="red--text text--lighten-2">store</v-icon>
-                        </v-list-tile-action>
-                        <v-list-tile-content>
-                          <v-list-tile-title><a href="https://example.com" target="_blank" rel="noopener">BOOTHで購入（電子書籍）</a></v-list-tile-title>
-                        </v-list-tile-content>
-                      </v-list-tile>
-                    </v-list>
+                  <v-card color="white darken-2" >
+                    <v-layout>
+                      <v-flex xs5>
+                        <v-img
+                          src="assets/frontcover@2x.png"
+                          height="200px"
+                          contain
+                        ></v-img>
+                      </v-flex>
+                      <v-flex xs7>
+                        <v-card-title primary-title>
+                          <div>
+                            <div class="headline">Chrome<br>デベロッパーツールを使いこなそう<br> Console編</div>
+                            <div>(技術書典5)</div>
+                          </div>
+                        </v-card-title>
+                      </v-flex>
+                    </v-layout>
+                    <v-divider light></v-divider>
+                    <v-card-actions class="pa-3">
+                      <v-icon class="red--text text--lighten-2">store</v-icon>
+                      <a href="https://techthetoaster.stores.jp" target="_blank" rel="noopener">Stores.jpで購入（紙・電子書籍）</a>
+                    </v-card-actions>
                   </v-card>
                 </v-flex>
               </v-layout>
