--- a/public/chrome-devtools-console/run-javascript/iframe.html
+++ b/public/chrome-devtools-console/run-javascript/iframe.html
@@ -6,6 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-<h2>これはiframe.htmlです。</h2>
+  <h2>これはiframe.htmlです。</h2>
+  <script>
+    console.log('iframe.htmlのログです');
+  </script>
 </body>
 </html>
