--- a/public/chrome-devtools-console/run-javascript/index.html
+++ b/public/chrome-devtools-console/run-javascript/index.html
@@ -22,5 +22,8 @@
 <body>
   <h1>これはindex.htmlです。</h1>
   <iframe src="iframe.html" width="400px"></iframe>
+  <script>
+    console.log('index.htmlのログです');
+  </script>
 </body>
 </html>
