--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,22 @@
   <title>Tech The Toaster</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!--Facebook OGP-->
+  <meta property="og:title" content="">
+  <meta property="og:site_name" content="Tech The Toaster">
+  <meta property="og:url" content="https://techthetoaster.org/">
+  <meta property="og:description" content="Tech The Toaster は 本を通して技術知識（Tech）を読んだ人に焼きつける（Toast）トースターであることを目指す技術サークルです。">
+  <meta property="og:image" content="https://techthetoaster.org/assets/techthetoaster@2x.png">
+  <meta property="fb:app_id" content="">
+  <meta property="og:type" content="Website">
+  <!--Twitter OGP-->
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:site" content="@howdy39">
+  <meta name="twitter:title" content="Tech The Toaster">
+  <meta name="twitter:description" content="Tech The Toaster は 本を通して技術知識（Tech）を読んだ人に焼きつける（Toast）トースターであることを目指す技術サークルです。">
+  <meta name="twitter:image:src" content="https://techthetoaster.org/assets/techthetoaster@2x.png">
+
   <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons' rel="stylesheet">
   <link href="https://unpkg.com/vuetify/dist/vuetify.min.css" rel="stylesheet">
   <!-- Global site tag (gtag.js) - Google Analytics -->
