--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,7 @@
     }
     li {
       list-style: none;
+      padding: 5px 0;
     }
     [v-cloak] {
       display: none
@@ -102,10 +103,10 @@
                     <v-card-actions class="pa-3">
                       <ul>
                         <li>
-                          <a href="https://techthetoaster.booth.pm/" target="_blank" rel="noopener">BOOTHで購入（書籍・電子書籍/PDF）</a>
+                          <a href="https://techthetoaster.booth.pm/" target="_blank" rel="noopener">BOOTHで購入（書籍・電子書籍）</a>
                         </li>
                         <li>
-                          <a href="https://techthetoaster.stores.jp" target="_blank" rel="noopener">Stores.jpで購入（書籍・電子書籍/PDF）</a>
+                          <a href="https://techthetoaster.stores.jp" target="_blank" rel="noopener">Stores.jpで購入（書籍・電子書籍）</a>
                         </li>
                       </ul>
                     </v-card-actions>
