fix: add devtools_network

--- a/public/index.html
+++ b/public/index.html
@@ -85,7 +85,7 @@
                     <v-layout>
                       <v-flex xs5>
                         <v-img
-                          src="assets/frontcover@2x.png"
+                          src="assets/frontcover_devtools_network@2x.png"
                           height="200px"
                           contain
                         ></v-img>
@@ -93,8 +93,8 @@
                       <v-flex xs7>
                         <v-card-title primary-title>
                           <div>
-                            <div class="headline">Chrome<br>デベロッパーツールを使いこなそう<br> Console編</div>
-                            <div>(技術書典5)</div>
+                            <div class="headline">Chrome<br>デベロッパーツールを使いこなそう<br> Network編</div>
+                            <div>(技術書典6)</div>
                           </div>
                         </v-card-title>
                       </v-flex>
@@ -103,10 +103,10 @@
                     <v-card-actions class="pa-3">
                       <ul>
                         <li>
-                          <a href="https://techthetoaster.booth.pm/" target="_blank" rel="noopener">BOOTHで購入（書籍・電子書籍）</a>
+                          <a href="https://techthetoaster.booth.pm/" target="_blank" rel="noopener">BOOTHで購入（準備中）</a>
                         </li>
                         <li>
-                          <a href="https://techthetoaster.stores.jp" target="_blank" rel="noopener">Stores.jpで購入（書籍・電子書籍）</a>
+                          <a href="https://techthetoaster.stores.jp" target="_blank" rel="noopener">STORES.jpで購入（準備中）</a>
                         </li>
                       </ul>
                     </v-card-actions>
@@ -114,6 +114,42 @@
                 </v-flex>
               </v-layout>
             </v-container>
+            <v-container grid-list-xl>
+                <v-layout row wrap align-center>
+                  <v-flex xs12 sm12 md12>
+                    <v-card color="white darken-2" >
+                      <v-layout>
+                        <v-flex xs5>
+                          <v-img
+                            src="assets/frontcover_devtools_console@2x.png"
+                            height="200px"
+                            contain
+                          ></v-img>
+                        </v-flex>
+                        <v-flex xs7>
+                          <v-card-title primary-title>
+                            <div>
+                              <div class="headline">Chrome<br>デベロッパーツールを使いこなそう<br> Console編</div>
+                              <div>(技術書典5)</div>
+                            </div>
+                          </v-card-title>
+                        </v-flex>
+                      </v-layout>
+                      <v-divider light></v-divider>
+                      <v-card-actions class="pa-3">
+                        <ul>
+                          <li>
+                            <a href="https://techthetoaster.booth.pm/" target="_blank" rel="noopener">BOOTHで購入（書籍・電子書籍）</a>
+                          </li>
+                          <li>
+                            <a href="https://techthetoaster.stores.jp" target="_blank" rel="noopener">STORES.jpで購入（書籍・電子書籍）</a>
+                          </li>
+                        </ul>
+                      </v-card-actions>
+                    </v-card>
+                  </v-flex>
+                </v-layout>
+              </v-container>
           </v-flex>
         </v-layout>
       </section>
