fix: 説明文を変更

--- a/public/index.html
+++ b/public/index.html
@@ -103,10 +103,10 @@
                     <v-card-actions class="pa-3">
                       <ul>
                         <li>
-                          <a href="https://techthetoaster.booth.pm/" target="_blank" rel="noopener">BOOTHで購入（4/14〜発売開始）</a>
+                          <a href="https://techthetoaster.booth.pm/" target="_blank" rel="noopener">BOOTHで購入（書籍・電子書籍）</a>
                         </li>
                         <li>
-                          <a href="https://techthetoaster.stores.jp" target="_blank" rel="noopener">STORES.jpで購入（4/14〜発売開始）</a>
+                          <a href="https://techthetoaster.stores.jp" target="_blank" rel="noopener">STORES.jpで購入（書籍・電子書籍）</a>
                         </li>
                       </ul>
                     </v-card-actions>
@@ -139,10 +139,10 @@
                       <v-card-actions class="pa-3">
                         <ul>
                           <li>
-                            <a href="https://techthetoaster.booth.pm/" target="_blank" rel="noopener">BOOTHで購入（書籍・電子書籍）</a>
+                            <a href="https://techthetoaster.booth.pm/" target="_blank" rel="noopener">BOOTHで購入（電子書籍）</a>
                           </li>
                           <li>
-                            <a href="https://techthetoaster.stores.jp" target="_blank" rel="noopener">STORES.jpで購入（書籍・電子書籍）</a>
+                            <a href="https://techthetoaster.stores.jp" target="_blank" rel="noopener">STORES.jpで購入（電子書籍）</a>
                           </li>
                         </ul>
                       </v-card-actions>
