fix: フォントサイズを変更

--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,9 @@
     [v-cloak] {
       display: none
     }
+    .display-1, .headline {
+      font-weight: 500;
+    }
     .icon-image {
       border-radius: 50%;
       width: 36px;
