--- a/public/index.html
+++ b/public/index.html
@@ -88,6 +88,42 @@
                     <v-layout>
                       <v-flex xs5>
                         <v-img
+                          src="assets/frontcover_webpagetest@2x.png"
+                          height="200px"
+                          contain
+                        ></v-img>
+                      </v-flex>
+                      <v-flex xs7>
+                        <v-card-title primary-title>
+                          <div>
+                            <div class="headline">WebPagetestで始めるパフォーマンス計測</div>
+                            <div>(技書博1)</div>
+                          </div>
+                        </v-card-title>
+                      </v-flex>
+                    </v-layout>
+                    <v-divider light></v-divider>
+                    <v-card-actions class="pa-3">
+                      <ul>
+                        <li>
+                          <a href="https://techthetoaster.booth.pm/" target="_blank" rel="noopener">BOOTHで購入（電子書籍）</a>
+                        </li>
+                        <li>
+                          <a href="https://techthetoaster.stores.jp" target="_blank" rel="noopener">STORES.jpで購入（電子書籍）</a>
+                        </li>
+                      </ul>
+                    </v-card-actions>
+                  </v-card>
+                </v-flex>
+              </v-layout>
+            </v-container>
+            <v-container grid-list-xl>
+              <v-layout row wrap align-center>
+                <v-flex xs12 sm12 md12>
+                  <v-card color="white darken-2" >
+                    <v-layout>
+                      <v-flex xs5>
+                        <v-img
                           src="assets/frontcover_devtools_network@2x.png"
                           height="200px"
                           contain
