fix: バージョンを1.5.16に固定

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
   <meta name="twitter:image:src" content="https://techthetoaster.org/assets/techthetoaster@2x.png">
 
   <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons' rel="stylesheet">
-  <link href="https://unpkg.com/vuetify/dist/vuetify.min.css" rel="stylesheet">
+  <link href="https://unpkg.com/vuetify@1.5.16/dist/vuetify.min.css" rel="stylesheet">
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-123763033-1"></script>
   <script>
@@ -272,7 +272,7 @@
   </v-app>
  </div>
  <script src="https://unpkg.com/vue/dist/vue.js"></script>
- <script src="https://unpkg.com/vuetify/dist/vuetify.js"></script>
+ <script src="https://unpkg.com/vuetify@1.5.16/dist/vuetify.js"></script>
  <script>
    new Vue({
      el: '#app',
