--- a/public/index.html
+++ b/public/index.html
@@ -83,6 +83,38 @@
         </v-layout>
         <v-layout column wrap class="my-5" align-center>
           <v-flex>
+          <v-container grid-list-xl>
+              <v-card color="white darken-2" >
+                <v-layout>
+                  <v-flex xs5>
+                    <v-img
+                      src="assets/frontcover_devtools_elements@2x.png"
+                      height="200px"
+                      contain
+                    ></v-img>
+                  </v-flex>
+                  <v-flex xs7>
+                    <v-card-title primary-title>
+                      <div>
+                        <div class="headline">Chrome<br>デベロッパーツールを使いこなそう<br> Elements編</div>
+                        <div>(技術書典7)</div>
+                      </div>
+                    </v-card-title>
+                  </v-flex>
+                </v-layout>
+                <v-divider light></v-divider>
+                <v-card-actions class="pa-3">
+                  <ul>
+                    <li>
+                      <a href="https://techthetoaster.booth.pm/" target="_blank" rel="noopener">BOOTHで購入（電子書籍）</a>
+                    </li>
+                    <li>
+                      <a href="https://techthetoaster.stores.jp" target="_blank" rel="noopener">STORES.jpで購入（電子書籍）</a>
+                    </li>
+                  </ul>
+                </v-card-actions>
+              </v-card>
+            </v-container>
             <v-container grid-list-xl>
               <v-card color="white darken-2" >
                 <v-layout>
