fix: abテストのdisplay:none検証用

--- a/public/index.html
+++ b/public/index.html
@@ -55,6 +55,9 @@
       border-radius: 50%;
       width: 36px;
     }
+    .display-none {
+      display: none;
+    }
   </style>
 </head>
 <body>
@@ -78,6 +81,7 @@
             <img src="assets/logo@2x.png" alt="Tech The Toaster logo" height="140" style="margin:30px">
             <h1 class="white--text mb-2 display-1 text-xs-center">We are Tech The Toaster</h1>
             <div class="subheading mb-3 text-xs-center">Writing for fun</div>
+            <div class="subheading mb-3 text-xs-center display-none">Happy writing</div>
           </v-layout>
         </v-parallax>
       </section>
