--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <script>(function(a,s,y,n,c,h,i,d,e){s.className+=' '+y;h.start=1*new Date;
   h.end=i=function(){s.className=s.className.replace(RegExp(' ?'+y),'')};
   (a[n]=a[n]||[]).hide=h;setTimeout(function(){i();h.end=null},c);h.timeout=c;
-  })(window,document.documentElement,'async-hide','dataLayer',1000,{'OPT_CONTAINER_ID':true});</script>
+  })(window,document.documentElement,'async-hide','dataLayer',4000,{'GTM-P75VMTW':true});</script>
 
   <!-- Google Tag Manager -->
   <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
