--- a/public/chrome-devtools-console/try-it-out/index.html
+++ b/public/chrome-devtools-console/try-it-out/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons' rel="stylesheet">
-  <link href="https://unpkg.com/vuetify/dist/vuetify.min.css" rel="stylesheet">
+  <link href="https://unpkg.com/vuetify@1.5.24/dist/vuetify.min.css" rel="stylesheet">
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-123763033-1"></script>
   <script>
@@ -62,8 +62,8 @@
     </v-content>
   </v-app>
 </div>
-<script src="https://unpkg.com/vue/dist/vue.js"></script>
-<script src="https://unpkg.com/vuetify/dist/vuetify.js"></script>
+<script src="https://unpkg.com/vue@2.6.11/dist/vue.js"></script>
+<script src="https://unpkg.com/vuetify@1.5.24/dist/vuetify.js"></script>
 <script>
   new Vue({
     el: '#app',
