fix: 表示できなくなっていバグを修正

--- a/public/index.html
+++ b/public/index.html
@@ -238,7 +238,7 @@
                 <v-list class="transparent">
                   <v-list-tile>
                     <v-list-tile-action>
-                      <img src="http://www.paper-glasses.com/api/twipi/howdy39" class="icon-image"/>
+                      <img src="https://github.com/howdy39.png" class="icon-image"/>
                     </v-list-tile-action>
                     <v-list-tile-content>
                       <v-list-tile-title><a href="https://twitter.com/howdy39" target="_blank" rel="noopener">howdy39</a></v-list-tile-title>
@@ -246,7 +246,7 @@
                   </v-list-tile>
                   <v-list-tile>
                     <v-list-tile-action>
-                      <img src="http://www.paper-glasses.com/api/twipi/locol23" class="icon-image"/>
+                      <img src="https://github.com/locol23.png" class="icon-image"/>
                     </v-list-tile-action>
                     <v-list-tile-content>
                       <v-list-tile-title><a href="https://twitter.com/locol23" target="_blank" rel="noopener">locol23</a></v-list-tile-title>
@@ -274,7 +274,7 @@
                   </v-list-tile>
                   <v-list-tile>
                     <v-list-tile-action>
-                      <img src="http://www.paper-glasses.com/api/twipi/howdy39" class="icon-image"/>
+                      <img src="https://github.com/howdy39.png" class="icon-image"/>
                     </v-list-tile-action>
                     <v-list-tile-content>
                       <v-list-tile-title><a href="https://twitter.com/intent/tweet?text=@howdy39%20" target="_blank" rel="noopener">howdy39(Twitter)</a></v-list-tile-title>
@@ -301,7 +301,7 @@
     </v-content>
   </v-app>
  </div>
- <script src="https://unpkg.com/vue/dist/vue.js"></script>
+ <script src="https://unpkg.com/vue@2.7.14/dist/vue.js"></script>
  <script src="https://unpkg.com/vuetify@1.5.16/dist/vuetify.js"></script>
  <script>
    new Vue({
